// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderTitle> in Classic should render correctly with default props 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 24px;
  line-height: 32px;
  font-weight: 600;
  text-align: left;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  margin: 0;
}

<h1
  className="c0"
  data-id="MODAL_HEADER_TITLE"
  data-test-id="MODAL_HEADER_TITLE"
/>
`;

exports[`<HeaderTitle> in Novo should render correctly with default props 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-family: Inter,sans-serif;
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-weight: 600;
  text-align: left;
  -webkit-letter-spacing: -0.017rem;
  -moz-letter-spacing: -0.017rem;
  -ms-letter-spacing: -0.017rem;
  letter-spacing: -0.017rem;
  margin: 0;
}

<h1
  className="c0"
  data-id="MODAL_HEADER_TITLE"
  data-test-id="MODAL_HEADER_TITLE"
/>
`;
